--- a/public/main.css
+++ b/public/main.css
@@ -10,7 +10,7 @@ body {
   font-size: 18px;
   line-height: 1.5;
   color: #0e0e0e;
-  background-color: #9e9e9e;
+  background-color: #909090;
 }
 
 nav {
